# jobseek

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BingSiteAuth.xml  CLAUDE.md  COMPANY_ENRICHMENT_PLAN.md  LARGE_COMPANY_ANALYSIS.md  LOCATION_NORMALIZATION_PLAN.md  N1_CONVERSION_WORKBOOK.md  PRIVACY-POLICY  R2_DESCRIPTIONS_PLAN.md  README.md  SCRAPER_UNIFICATION_PLAN.md  SEARCH_UI_DESIGN.md  SECURITY_AUDIT.md  SEO_AND_AI_SEO_REPORT.md  SUPABASE_MIGRATION_PLAN.md  TERMS-OF-SERVICE  docker-compose.yml  index.html  jobseek_standalone.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  presentation.html  turbo.json
apps/crawler/: .dockerignore  .env.example  AGENTS.md  BATCH_ADD_INSTRUCTIONS.md  Dockerfile  VERSION  alerts.yaml  alloy.river  deploy.sh  deploy_helpers.sh  docker-compose.yml  env.local.example  fly.staging.toml  fly.toml  grafana-dashboard.json  pyproject.toml  pyrightconfig.json  unmatched_occupations.txt
apps/crawler/data/: README.md  alert-filters.yaml  boards.csv  cdp_routes.csv  companies.csv  company_descriptions.csv  industries.csv  labeller_optout.txt  occupation_domains.csv  occupations.csv  seniority.csv  technologies.csv
apps/crawler/docs/: typesense-transient-investigation-3055.md
apps/crawler/murmur/: README.md  package.json  tsconfig.json
apps/crawler/murmur/pipelines/: add-company.yaml
apps/crawler/murmur/scripts/: pipeline-def.schema.json  register.test.ts  register.ts  validate-pipeline.test.ts  validate-pipeline.ts
apps/crawler/scripts/: DUAL_LANG_ANALYSIS.md  add_us_region_macros.py  analyze_dual_lang.py  backfill_bite_scrape.py  backfill_company_enrichment.py  backfill_join_scrape.py  backfill_location_languages.py  backfill_locations.py  backfill_logo_type.py  backfill_occupations.py  backfill_region_pop.py  backfill_rippling_scrape.py  backfill_salary_experience.py  backfill_seniority.py  backfill_smartrecruiters_scrape.py  backfill_technologies.py  backfill_workable_scrape.py  browser_experiment.py  browser_experiment_results.json  browser_experiment_v2.py  browser_experiment_v2_results.json  consolidate_workday_boards.py  demo_hreflang_output.py  desc_cache.py  docker_memory_test.sh  eval_location_resolver.py  export_trace.py  extract_keywords.py  grep-lib-purity.sh  keywords_full.txt  keywords_report.txt  measure_memory.py  memory_sweep.sh  migrate_descriptions_to_r2.py  poll_leases.py  refresh_currency_rates.py  reprocess_salary_eu.py  requeue_missing_scrape_jobs.py  seed_geonames.py  sort_csvs.py  (+4 more)
apps/crawler/src/: backfill.py  batch.py  bootstrap.py  cli.py  config.py  cron_metrics.py  csvtool.py  db.py  discover.py  enrich_batch.py  enricher.py  export_cursor_fence.py  exporter.py  image_migrate.py  image_sync.py  indexnow.py  inspect.py  metrics.py  notify_invalidate.py  occupation_reprocess.py  probe_boards.py  r2_worker.py  reconciliation.py  redis_queue.py  repair_relisted_cdc.py  retire_stale_boards.py  retry_stalled.py  salary_reprocess.py  scheduler.py  seed_meta.py  sync.py  typesense_client.py  typesense_schema.py  validate.py
apps/crawler/src/core/: description_store.py  enum_normalize.py  experience_extract.py  location_resolve.py  monitor.py  occupation_resolve.py  salary_extract.py  scrape.py  seniority_resolve.py  technology_resolve.py
apps/crawler/src/labeller/: __init__.py  blocks.py  canonicalize.py  cli.py  merge.py  normalize.py  paths.py  prepare.py  render.py  sampling.py  scrub.py  upload.py  validate.py
apps/crawler/src/lua/: claim_work.lua  complete_task.lua  enqueue_task.lua  heartbeat_task.lua  reap_expired.lua  reschedule_task.lua
apps/crawler/src/migrations/: alembic.ini  env.py
apps/crawler/src/processing/: board.py  cpu.py  r2_stage.py  scrape.py
apps/crawler/src/queries/: alert.py  lookups.py  monitor.py  score.py  scrape.py
apps/crawler/src/scripts/: refresh_currency_rates.py
apps/crawler/src/shared/: api_sniff.py  browser.py  cdp.py  constants.py  csv_io.py  dedup.py  embedded.py  events.py  extract.py  html_normalize.py  http.py  http_retry.py  langdetect.py  locks.py  logging.py  nextdata.py  output.py  proxy.py  queue.py  redis.py  slug.py  ssrf.py  tdm.py  throttle.py  truncation.py
apps/crawler/src/workers/: __init__.py  monitor_memory.py  pipeline.py  r2_drain.py
apps/crawler/src/workspace/: __main__.py  _compat.py  artifacts.py  board_claim_kv.py  career_discover.py  cli.py  codex_routine_runner.py  codex_runner.py  errors.py  filelock.py  git.py  job_links.py  log.py  logo_discover.py  output.py  preflight.py  state.py  trace.py  trace_backfill.py  url_check.py  workflow.py  workflow.yaml  worktree_reconcile.py
apps/crawler/tests/: conftest.py  test_accenture_monitor.py  test_adp_scraper.py  test_alloy_config.py  test_almacareer.py  test_amazon.py  test_api_sniff.py  test_api_sniffer_monitor.py  test_api_sniffer_scraper.py  test_artifacts.py  test_ashby.py  test_ats_template.py  test_backfill_descriptions.py  test_backfill_experience.py  test_batch.py  test_bite.py  test_board_dry_run.py  test_board_gone.py  test_breezy.py  test_browser_shared.py  test_career_discover.py  test_cdc_migration.py  test_cdp_transport.py  test_code_quality_exports.py  test_codex_routine_runner.py  test_codex_runner.py  test_comeet.py  test_compat.py  test_config.py  test_cpu_salary_annualization.py  test_cpu_titles.py  test_cron_metrics.py  test_csvtool.py  test_data_backup.py  test_db.py  test_dedup.py  test_deel.py  test_deploy_helpers.py  test_deploy_script.py  test_description_store.py  (+161 more)
apps/crawler/tests/e2e/: test_labeller_sampling_plan.py  test_postgres_cdc_commit_order.py  test_typesense_indexing.py
apps/crawler/tests/fixtures/: ayuda_en_accion_talentclue_jobpage.html  ayuda_en_accion_talentclue_jobpage_coord.html  barcelona_activa_talentclue_jobpage.html  barcelona_activa_talentclue_jobpage_admin.html  decathlon_talentclue_jobpage.html  decathlon_talentclue_jobpage_taller.html  didi_global_jobdetail.html  jobylon_mcdonalds_se.html  (+6 more)
apps/crawler/traces/: traces.jsonl
apps/crawler/ws-package/: pyproject.toml  smoketest.py
(+3606 files in other folders)
