[project]
name = "jobseek-crawler"
dynamic = ["version"]
description = "Job listing monitor and extraction crawler"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "boto3>=1.35",
    "click>=8.1",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "polars>=1.38.1",
    "jmespath>=1.0",
    "upstash-redis>=1.6.0",
    "Pillow>=10.0",
    "cairosvg>=2.9.0",
    "playwright>=1.58.0",
    "fast-langdetect>=0.3",
    "prometheus-client>=0.21",
    "redis>=5.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "selectolax>=0.4.7",
    "pypdf>=4.0",
    "jinja2>=3.1",
    "huggingface-hub>=1.7.2",
    "cryptography>=46.0.5",
    "typesense>=0.21",
]

[project.scripts]
crawler = "src.cli:main"
ws = "src.workspace.cli:main"

[project.optional-dependencies]
enrich = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.4",
    "fakeredis[lua]>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
