[project]
name = "jobseek-crawler"
dynamic = ["version"]
description = "Job listing monitor and extraction crawler"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30",
    "boto3>=1.35",
    "click>=8.1",
    "httpx>=0.28",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "python-dotenv>=1.2.2",
    "polars>=1.38.1",
    "jmespath>=1.0",
    "upstash-redis>=1.7.0",
    "Pillow>=12.2.0",
    "cairosvg>=2.9.0",
    "playwright>=1.58.0",
    "fast-langdetect>=1.0.1",
    "prometheus-client>=0.21",
    "redis>=5.0",
    "alembic>=1.18.5",
    "psycopg2-binary>=2.9",
    "selectolax>=0.4.7",
    "pypdf>=6.13.3",
    "jinja2>=3.1",
    "huggingface-hub>=1.7.2",
    "cryptography>=48.0.1",
    "typesense>=0.21",
    "beautifulsoup4>=4.12",
    "jsonschema>=4.23",
]

[project.scripts]
crawler = "src.cli:main"
ws = "src.workspace.cli:main"
labeller = "src.labeller.cli:main"

[project.optional-dependencies]
enrich = ["openai>=1.0", "anthropic>=0.116.0", "google-genai>=1.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.4",
    "fakeredis[lua]>=2.36.2",
    "pyright>=1.1.411",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
