[project]
name = "jobseek-crawler-setup"
dynamic = ["version"]
description = "Workspace CLI for configuring jobseek-crawler companies"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "Pillow>=10.0",
]

[project.scripts]
ws = "src.workspace.cli:main"

[tool.hatch.version]
path = "../VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
# Workspace CLI and supporting modules
"../src/__init__.py" = "src/__init__.py"
"../src/workspace/" = "src/workspace/"
"../src/shared/__init__.py" = "src/shared/__init__.py"
"../src/shared/constants.py" = "src/shared/constants.py"
"../src/shared/csv_io.py" = "src/shared/csv_io.py"
"../src/csvtool.py" = "src/csvtool.py"
"../src/inspect.py" = "src/inspect.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
